# Calculator-SpecKitPlus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-calculator-frontend/: 0001-pastel-calculator-frontend-spec.spec.prompt.md  0002-calculator-implementation-plan.plan.prompt.md  0003-tkinter-plan-revision.plan.prompt.md  0004-tkinter-calculator-tasks-generation.tasks.prompt.md  0005-tkinter-calculator-implementation.green.prompt.md
history/prompts/constitution/: 0001-initial-python-calculator-constitution.constitution.prompt.md
specs/001-calculator-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-calculator-frontend/checklists/: requirements.md
src/calculator/: __init__.py  gui.py  main.py  models.py  operations.py  validators.py
tests/: conftest.py  test_models.py  test_operations.py  test_validators.py
